--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start" : "node ./src/server.js" , 
-     "dev" : "nodemon ./src/server.js" , 
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-errors": "^2.0.0",
     "nodemon": "^3.1.2"
   }
 }
